// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action should apply transformation on icon 1`] = `
<Button
  aria-label="Click me"
  className=""
  data-feature="action.feature"
  disabled={false}
  icon="talend-caret-down"
  onClick={[Function]}
  onMouseDown={[Function]}
  title="Title to describe click me button"
>
  Click me
</Button>
`;

exports[`Action should display a Progress indicator if set 1`] = `
<Button
  aria-label="Click me (in progress)"
  className="navbar-btn theme-btn-disabled"
  data-feature="action.feature"
  disabled={true}
  icon="talend-caret-down"
  onClick={[Function]}
  onMouseDown={[Function]}
  title="Title to describe click me button"
>
  Click me
</Button>
`;

exports[`Action should display a disabled Icon 1`] = `
<Button
  aria-label="Click me"
  className="navbar-btn theme-btn-disabled"
  data-feature="action.feature"
  disabled={true}
  icon="talend-caret-down"
  onClick={[Function]}
  onMouseDown={[Function]}
  title="Title to describe click me button"
>
  Click me
</Button>
`;

exports[`Action should pass all props to the Button 1`] = `
<Button
  aria-label="Click me"
  className="navbar-btn"
  data-feature="action.feature"
  disabled={false}
  icon="talend-caret-down"
  onClick={[Function]}
  onMouseDown={[Function]}
  title="Title to describe click me button"
>
  Click me
</Button>
`;

exports[`Action should render a button 1`] = `
<Button
  aria-label="Click me"
  className=""
  data-feature="action.feature"
  disabled={false}
  icon="talend-caret-down"
  onClick={[Function]}
  onMouseDown={[Function]}
  title="Title to describe click me button"
>
  Click me
</Button>
`;

exports[`Action should render a button with a overlay component 1`] = `
<OverlayTrigger
  onClick={[Function]}
  overlayComponent={[Function]}
  overlayId="myOverlayId"
  overlayPlacement="bottom"
  preventScrolling={false}
>
  <Button
    aria-haspopup={true}
    aria-label="Click me"
    className=""
    data-feature="action.feature"
    disabled={false}
    icon="talend-caret-down"
    onClick={null}
    onMouseDown={null}
    onMouseEnter={null}
    onMouseLeave={null}
    title="Title to describe click me button"
  >
    Click me
  </Button>
</OverlayTrigger>
`;

exports[`Action should render a button with loading state 1`] = `<Skeleton.Button />`;

exports[`Action should render a button without an overlay component if inProgress is true 1`] = `
<Button
  aria-label="Click me (in progress)"
  className="theme-btn-disabled"
  data-feature="action.feature"
  disabled={true}
  icon="talend-caret-down"
  onClick={null}
  onMouseDown={null}
  onMouseEnter={null}
  onMouseLeave={null}
  title="Title to describe click me button"
>
  Click me
</Button>
`;

exports[`Action should render a link button with loading state 1`] = `
<Button
  aria-label=" (loading)"
  className="btn-icon-only"
  disabled={false}
  onClick={[Function]}
  onMouseDown={[Function]}
/>
`;

exports[`Action should render action with html property name = props.name if set 1`] = `
<Button
  aria-label="Click me"
  className=""
  data-feature="action.feature"
  disabled={false}
  icon="talend-caret-down"
  name="custom_name"
  onClick={[Function]}
  onMouseDown={[Function]}
  title="Title to describe click me button"
>
  Click me
</Button>
`;

exports[`Action should reverse icon/label 1`] = `
<Button
  aria-label="Click me"
  className=""
  data-feature="action.feature"
  disabled={false}
  icon="talend-caret-down"
  onClick={[Function]}
  onMouseDown={[Function]}
  title="Title to describe click me button"
>
  Click me
</Button>
`;
